syntax = "proto3";

package servers;

import "models/product.model.proto";

service ProductService {
  rpc FetchProducts(models.FetchProductRequest) returns (models.FetchProductResponse);
}
